# toktrail

./: .codecrate.toml  .gitignore  .pre-commit-config.yaml  .taskledger.toml  AGENTS.md  API.md  CHANGELOG.md  README.md  pyproject.toml  setup.py
docs/: api.rst  api_usage.rst  build.sh  conf.py  config.rst  harnesses.rst  index.rst  stable_api_examples.md  usage.rst
examples/: _manual_run_common.py  manual_run_amp.py  manual_run_claude.py  manual_run_codex.py  manual_run_copilot.py  manual_run_droid.py  manual_run_goose.py  manual_run_opencode.py  manual_run_pi.py  manual_run_vibe.py
scripts/: file_stats.py
tests/: helpers.py  test_adapter_summary.py  test_amp_parser.py  test_analysis.py  test_api_config.py  test_api_contract.py  test_api_environment.py  test_api_events.py  test_api_imports.py  test_api_reports.py  test_api_sessions.py  test_api_sources.py  test_api_statusline.py  test_api_workflow.py  test_architecture_smoke.py  test_cache.py  test_claude_parser.py  test_cli.py  test_code_parser.py  test_codex_parser.py  test_config.py  test_copilot_parser.py  test_costing.py  test_db.py  test_docs_commands.py  test_droid_parser.py  test_git_sync.py  test_goose_parser.py  test_harnessbridge_parser.py  test_opencode_parser.py  test_paths.py  test_periods.py  test_pi_parser.py  test_price_parser.py  test_provider_identity.py  test_scanner.py  test_stable_api_examples.py  test_sync.py  test_vibe_parser.py
tests/cli/: cli_legacy.py
tests/fixtures/: opencode.db
tests/perf/: bench_reports.py
toktrail/: __init__.py  _version.py  analysis.py  cache.py  cli.py  cli_sync.py  config.py  costing.py  db.py  errors.py  formatting.py  git_sync.py  models.py  paths.py  periods.py  price_parser.py  provider_identity.py  reporting.py  scanner.py  statusline.py  sync.py
toktrail/_db/: __init__.py  connection.py  legacy_db.py  reports_runs.py
toktrail/adapters/: __init__.py  amp.py  base.py  claude.py  code.py  codex.py  copilot.py  droid.py  goose.py  harnessbridge.py  opencode.py  pi.py  registry.py  summary.py  vibe.py
toktrail/api/: __init__.py  _common.py  _conversions.py  analysis.py  areas.py  config.py  environment.py  events.py  harnesses.py  imports.py  machines.py  models.py  paths.py  reports.py  sessions.py  sources.py  statusline.py  sync.py  workflow.py
toktrail/cli_parts/: __init__.py  app.py  config.py  filters.py  formatting.py  legacy_cli.py  machines.py  run.py  subscriptions.py  table.py  types.py
toktrail/config_parts/: __init__.py  core_config.py  legacy_config.py  parse_areas.py  (+2 more)
(+15 files in other folders)
